test/src/e2e_vm_tests/test_programs/should_pass/stdlib/assert_eq_revert/src/main.sw
script;

use core::codec::*;

fn main() {
    assert_eq(1, 2);
}