test/src/e2e_vm_tests/test_programs/should_fail/same_named_fn_params/src/main.sw
script;

fn foo(x: u32, x:u32) {
    
}

fn main() {
    foo(1,2)
}